--- a/view/index.html
+++ b/view/index.html
@@ -82,5 +82,17 @@
     </div>
   </div>  
   <div id="toast-container" style="position: fixed; top: 20px; right: 20px; z-index: 9999;"></div>
+  <div id="server-status-bubble" style="
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: gray;
+  border: 2px solid #fff;
+  box-shadow: 0 0 4px #0002;
+  z-index: 1000;
+  "></div>
 </body>
 </html>
